Uploading building temporary page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1"/>
-	<title>PORSHENLAI.GITHUB.IO</title>
+	<title>porshenlai.github.io</title>
+	<!--link rel="icon" type="image/png" href="/images/favicon.png"/-->
+	<!--link rel="stylesheet" href="style.css"/-->
+	<script>
+		document.onload=() => {
+			document.onload=()=>undefined;
+			let SS=new Piers.Session.MSHome();
+			console.log(SS, Piers.Widget);
+		}
+	</script>
+	<script src="/piers/init.js"
+			PierEntrance="document.onload"
+			PierXMods="Widget,Session"></script>
 </head>
 <body>
+	<div style="position:absolute;top:0;right:0;">porshenlai.github.io</div>
 	<h1>Building ...</h1>
 </body>
 </html>
-
